PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite 9.8.0 Milestone 1
3 June 2020

pts-core: When an install fails, try a newer minor version update to that test profile if available (fixes broken download mirrors, etc)
pts-core: When a newer minor version of a test profile is installed and a requested (older) one is not, use the newer compatible version
pts-core: Rewrite virtual test suite implementation
pts-core: Add handler for ensuring reported system time is accurate, otherwise calculate current date/time using offsets
pts-core: When scanning test suites on disk, ensure the latest test suite version is used
pts-core: Add test-to-suite map sub-command
pts-core: Fix for loading the result viewer JavaScript / CSS when running on a Windows host
pts-core: For tests requiring root but not run initially as root and using monitoring data, drop the first run to ensure sudo promot doesn't skew time
pts-core: Fix PHP8 error in the 'info' sub-command
pts-core: Other PHP deprecation code tweaks
phodevi: Add amd_energy Linux driver support

Phoronix Test Suite 9.6.1
25 May 2020

pts-core: Show unit/scale in CSV export
pts-core: When limiting results to show in result viewer, keep child objects that match the desired type for the parent
pts-core: Add rebuild-test-suite option for regenerating suite XML all cleaned up
pts-core: Allow exporting result files to XML test suites via the result viewer
linux_perf: Reporting many more events
pts-core: External dependency updates
pts_Graph: graph code tweaks
phodevi: Avoid macOS reporting X-Core string before Intel CPU string
phodevi: Sway compositor version detection
phodevi: Detection of newer Arm CPU cores

Phoronix Test Suite 9.6.0
21 April 2020

pts-core: Allow building virtual suites off external dependencies
pts-core: Various result viewer improvements
pts-core: Allow saving results under stress-run
pts-core: Responsive/mobile result viewer improvements
pts-core: Show local tests within the build-suite sub-command